--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -13,6 +13,17 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      #Agregando las dependencias del entorno virtual
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.12' 
+
+    - name: Install Django
+      run: |
+        python -m pip install --upgrade pip
+        pip install django==4.2
+    #fin de dependencias
     - name: test django
       id: test-django
       uses: classroom-resources/autograding-python-grader@v1
