--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -17,12 +17,19 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.12' 
-
-    - name: Install Django
+        python-version: '3.12'
+          
+    - name: Set up virtual environment
       run: |
-        python -m pip install --upgrade pip
+        python -m venv venv
+        source venv/bin/activate
+          
+    - name: Install dependencies
+      run: |
+        pip install --upgrade pip
         pip install django==4.2
+        python manage.py makemigrations productos
+        python manage.py migrate
     #fin de dependencias
     - name: test django
       id: test-django
