--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -17,19 +17,17 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.12'
-          
-    - name: Set up virtual environment
-      run: |
-        python -m venv venv
-        venv\Scripts\activate
-          
+        python-version: '3.8'
+
     - name: Install dependencies
       run: |
-        pip install --upgrade pip
-        pip install django==4.2
-        python manage.py makemigrations productos
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run migrations
+      run: |
         python manage.py migrate
+
     #fin de dependencias
     - name: test django
       id: test-django
