--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,7 +1,7 @@
 name: Autograding Tests
 'on':
-- push
-- repository_dispatch
+  - push
+  - repository_dispatch
 permissions:
   checks: write
   actions: read
@@ -11,34 +11,30 @@ jobs:
     runs-on: ubuntu-latest
     if: github.actor != 'github-classroom[bot]'
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      #Agregando las dependencias del entorno virtual
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run migrations
-      run: |
-        python manage.py migrate
+      - name: Run migrations
+        run: |
+          python manage.py migrate
 
-    #fin de dependencias
-    - name: test django
-      id: test-django
-      uses: classroom-resources/autograding-python-grader@v1
-      with:
-        timeout: 1
-        max-score: 20
-        setup-command: python manage.py test
-    - name: Autograding Reporter
-      uses: classroom-resources/autograding-grading-reporter@v1
-      env:
-        TEST-DJANGO_RESULTS: "${{steps.test-django.outputs.result}}"
-      with:
-        runners: test-django
+      - name: Test Django
+        run: |
+          python manage.py test
+
+      - name: Autograding Reporter
+        uses: classroom-resources/autograding-grading-reporter@v1
+        env:
+          TEST-DJANGO_RESULTS: "${{steps.test-django.outputs.result}}"
+        with:
+          runners: test-django
