Update classroom.yml Error importar Django

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,23 +1,26 @@
 name: Autograding Tests
-'on':
-  - push
-  - repository_dispatch
+
+on:
+  push:
+  repository_dispatch
+
 permissions:
   checks: write
   actions: read
   contents: read
+
 jobs:
   run-autograding-tests:
     runs-on: ubuntu-latest
     if: github.actor != 'github-classroom[bot]'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.12'
 
       - name: Install dependencies
         run: |
@@ -25,20 +28,29 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run migrations
-        run: |
-          python manage.py migrate
+      run: |
+        source venv/bin/activate
+        python manage.py makemigrations productos
+        python manage.py migrate
 
-      - name: test django
-        id: test-django
-        uses: classroom-resources/autograding-python-grader@v1
-        with:
-          timeout: 1
-          max-score: 20
-          setup-command: python manage.py test
+    - name: Run tests
+      run: |
+        source venv/bin/activate
+        python manage.py test
 
-      - name: Autograding Reporter
-        uses: classroom-resources/autograding-grading-reporter@v1
-        env:
-          TEST-DJANGO_RESULTS: "${{steps.test-django.outputs.result}}"
-        with:
-          runners: test-django
+    - name: Autograding
+      id: test-django
+      uses: classroom-resources/autograding-python-grader@v1
+      with:
+        timeout: 1
+        max-score: 20
+        setup-command: |
+          source venv/bin/activate
+          python manage.py test
+
+    - name: Autograding Reporter
+      uses: classroom-resources/autograding-grading-reporter@v1
+      env:
+        TEST-DJANGO_RESULTS: "${{steps.test-django.outputs.result}}"
+      with:
+        runners: test-django
