--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,15 +1,19 @@
 name: Autograding Tests
+
 'on':
   - push
   - repository_dispatch
+
 permissions:
   checks: write
   actions: read
   contents: read
+
 jobs:
   run-autograding-tests:
     runs-on: ubuntu-latest
     if: github.actor != 'github-classroom[bot]'
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -17,15 +21,18 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.12'
+          python-version: '3.8'
 
       - name: Install dependencies
         run: |
+          python -m venv venv
+          source venv/bin/activate
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run migrations
         run: |
+          source venv/bin/activate
           python manage.py migrate
 
       - name: test django
