--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,14 +1,11 @@
 name: Autograding Tests
-
-on:
+'on':
   - push
   - repository_dispatch
-
 permissions:
   checks: write
   actions: read
   contents: read
-
 jobs:
   run-autograding-tests:
     runs-on: ubuntu-latest
@@ -16,7 +13,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+      
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -31,28 +28,17 @@ jobs:
         run: |
           python manage.py migrate
 
-      - name: Run tests
+      - name: test django
         id: test-django
-        run: |
-          python manage.py test
-
-      - name: Autograding
-        id: autograding
         uses: classroom-resources/autograding-python-grader@v1
         with:
           timeout: 1
           max-score: 20
-          setup-command: |
-            source venv/bin/activate
-            python manage.py test
-        env:
-          pythonLocation: /opt/hostedtoolcache/Python/3.8.18/x64
-          LD_LIBRARY_PATH: /opt/hostedtoolcache/Python/3.8.18/x64/lib
+          setup-command: python manage.py test
 
       - name: Autograding Reporter
         uses: classroom-resources/autograding-grading-reporter@v1
         env:
-          TEST-DJANGO_RESULTS: "${{steps.autograding.outputs.result}}"
+          TEST-DJANGO_RESULTS: "${{steps.test-django.outputs.result}}"
         with:
-          runners: autograding
-          token: ${{ secrets.GITHUB_TOKEN }}
+          runners: test-django
