--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -17,15 +17,19 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
+          python -m venv venv
+          source venv/bin/activate
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run migrations
         run: |
+          source venv/bin/activate
+          python manage.py makemigrations
           python manage.py migrate
 
       - name: test django
